apps/lidarr/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lidarr
  name: lidarr
spec:
  ports:
  - name: web
    port: 8686
    protocol: TCP
    targetPort: 8686
  selector:
    app: lidarr
  type: ClusterIP
